settings: Fix text alignment in save and discard buttons.
The text was misaligned wrt icon in button so,
to align it properly, I added vertical-align and
line-height property to the span.

Fixes: #20583.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1238,6 +1238,11 @@ input[type="checkbox"] {
             font-size: 15px;
             font-weight: 500;
         }
+
+        .save-discard-widget-button-text {
+            vertical-align: middle;
+            line-height: 0;
+        }
     }
 
     .save-button-controls {
